# ml_fastapi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: main.py  models.py  schemas.py
tests/: conftest.py
tests/test_app/: conftest.py  test_api.py
tools/: iris_analysis.py
